Version updated to 2.0.0 Compiled with Java 11. ResourceDisposal class cleaned up, now it is easier to use. FileBuffer now registers with ResourceDisposal class for handling run-away resources.